syntax = "proto3";
option go_package = "./pb";

message FlagEvent {
  bool flag_removed = 1;
  int64 start_period = 2;
}

message FlagValue {
  bool flagged = 1;
  int64 start_period = 2;
}